[package]
name = "async-pub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
once_cell = "1.19"
reqwest = "0.12.9"
serde_json = "1.0.133"
tokio = "1.41.1"

[dependencies.serde]
version = "1.0.215"
features = ["std", "derive"]

# [dependencies.]
