[package]
name = "async-pub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
once_cell = "1.19"
reqwest = "0.12.9"
serde_json = "1.0.133"
futures = "0.3.31"

[dependencies.tokio-serde]
version = "0.9.0"
features = ["json"]

[dependencies.tokio-util]
version = "0.7.12"
features = ["codec"]

[dependencies.serde]
version = "1.0.215"
features = ["std", "derive"]

[dependencies.tokio]
version = "1.41.1"
features = ["macros", "rt-multi-thread"]
